# Mail-parsing

./: README.md
eml/: Cargo.toml  eml.txt  邮件原始文件解析.eml
eml/src/: main.rs
