[package]
name = "eml"
version = "0.1.0"
edition = "2021"

[dependencies]
mailparse = "0.14"  # 用于解析EML文件



[target.x86_64-pc-windows-gnu]
linker = "D:\\gcccode\\mingw64\\bin\\x86_64-w64-mingw32-gcc.exe"
ar = "D:\\gcccode\\mingw64\\bin\\ar.exe"
rustflags = [
    "-C", "target-feature=+crt-static",
    "-C", "link-args=-static -lwinpthread -lssp -static-libgcc",
]